# XJTU-Rust-news_recommendation

./: .env  Cargo.toml  README.md  create_table_img.sql  schema.sql
src/: config.rs  errors.rs  main.rs
src/api/: auth_handler.rs  comment_handler.rs  feedback_handler.rs  interaction_handler.rs  mod.rs  news_handler.rs  recommendation_handler.rs  system_info_handler.rs  user_handler.rs  viz.rs
src/db/: article_queries.rs  comment_queries.rs  connection.rs  feedback_queries.rs  interaction_queries.rs  mod.rs  user_queries.rs
src/models/: article.rs  user.rs
src/services/: auth_service.rs  comment_service.rs  crawler_service.rs  feedback_service.rs  interaction_service.rs  mod.rs  recommendation_service.rs  user_service.rs
src/utils/: hasher.rs  jwt.rs  mod.rs  tfidf.rs
src/visualization/: mod.rs  model_performance.rs
static/: auth.html  index.html  profile.html  viz.html
static/css/: auth.css  comments.css  interactions.css  styles.css  user-profile.css
static/images/: generate_images.js
static/js/: app.js  app_integrated.js  auth.js  categories.js  comments.js  feedback-analysis.js  interactions.js  profile.js  user.js  viz.js
